--- a/index.html
+++ b/index.html
@@ -15,7 +15,28 @@
             know minimum number of notes to return.
         </p>
         <label for="bill-amount">Bill Amount:</label>
-        <input type="text" id="bill-amount">
+        <input type="text" id="bill-amount"/>
+        
+        <label for="cash-given">Cash Given</label>
+        <input id="cash-given" type="text">
+        <button id="check-button">Check</button>
+        <table class="change-table">
+            <caption>Return Change</caption>
+            <tr>
+                <th>No of Notes</th>
+                <td></td>
+            </tr>
+            <tr>
+                <th>Note</th>
+                <td>2000</td>
+                <td>500</td>
+                <td>100</td>
+                <td>20</td>
+                <td>10</td>
+                <td>5</td>
+                <td>1</td>
+            </tr>
+        </table>
     </div>
 </body>
 <script src="index.js"></script>
