--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css"/>
     <title>Cash Register</title>
+    <script src="https://kit.fontawesome.com/27ddb48ed0.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <div class="container">
@@ -15,13 +16,15 @@
             know minimum number of notes to return.
         </p>
         <label for="bill-amount">Bill Amount:</label>
-        <input type="text" id="bill-amount"/>
+        <input type="number" id="bill-amount"/>
         <label for="cash-given">Cash Given</label>
-        <input id="cash-given" type="text">
+        <input id="cash-given" type="number">
         <button id="check-button">Check</button>
         <p id="error-message"></p>
         <table class="change-table">
-            <caption>Return Change</caption>
+            <caption>Return Change
+                <span id="return"></span>
+            </caption>
             <tr>
                 <th>No of Notes</th>
                 <td class="no-of-notes"></td>
@@ -44,6 +47,17 @@
             </tr>
         </table>
     </div>
+    <div class="card">
+                <div class="card-body">
+                    <div class="social">
+                        <ul>
+                            <li><a href="https://github.com/KHemanthRaju" target="_blank"><i class="fab fa-github"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/hemanth-raju-aba388176/" target="_blank"><i class="fab fa-linkedin-in"></i></a></li>
+                            <li><a href="https://twitter.com/khraju123" target="_blank"><i class="fas fa-globe"></i></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
 </body>
-<script src="index.js"></script>
+<script src="index.js" type="text/javascript"></script>
 </html>
