--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             know minimum number of notes to return.
         </p>
         <label for="bill-amount">Bill Amount:</label>
-        <input type="number" id="bill-amount"/>
+        <input type="number" id="bill-amount" class="input"/>
         <label for="cash-given">Cash Given</label>
-        <input id="cash-given" type="number">
+        <input id="cash-given" type="number" class="input"/>
         <button id="check-button">Check</button>
         <p id="error-message"></p>
         <table class="change-table">
